// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionsTable renders Actions column as expected 1`] = `
<div>
  <div
    data-testid="TransactionFormButton"
  >
    <svg
      class="flex"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m7 17.013 4.413-.015 9.632-9.54c.378-.378.586-.88.586-1.414s-.208-1.036-.586-1.414l-1.586-1.586c-.756-.756-2.075-.752-2.825-.003L7 12.583v4.43zM18.045 4.458l1.589 1.583-1.597 1.582-1.586-1.585 1.594-1.58zM9 13.417l6.03-5.973 1.586 1.586-6.029 5.971L9 15.006v-1.589z"
      />
      <path
        d="M5 21h14c1.103 0 2-.897 2-2v-8.668l-2 2V19H8.158c-.026 0-.053.01-.079.01-.033 0-.066-.009-.1-.01H5V5h6.847l2-2H5c-1.103 0-2 .897-2 2v14c0 1.103.897 2 2 2z"
      />
    </svg>
  </div>
  <div
    data-testid="TransactionFormButton"
  >
    <svg
      class="flex"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M9.172 16.242 12 13.414l2.828 2.828 1.414-1.414L13.414 12l2.828-2.828-1.414-1.414L12 10.586 9.172 7.758 7.758 9.172 10.586 12l-2.828 2.828z"
      />
      <path
        d="M12 22c5.514 0 10-4.486 10-10S17.514 2 12 2 2 6.486 2 12s4.486 10 10 10zm0-18c4.411 0 8 3.589 8 8s-3.589 8-8 8-8-3.589-8-8 3.589-8 8-8z"
      />
    </svg>
  </div>
</div>
`;

exports[`TransactionsTable renders Amount column as expected 1`] = `
<div>
  <span
    class="text-red-300 flex items-center"
  >
    <svg
      class="text-xs mr-1"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 448 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M413.1 222.5l22.2 22.2c9.4 9.4 9.4 24.6 0 33.9L241 473c-9.4 9.4-24.6 9.4-33.9 0L12.7 278.6c-9.4-9.4-9.4-24.6 0-33.9l22.2-22.2c9.5-9.5 25-9.3 34.3.4L184 343.4V56c0-13.3 10.7-24 24-24h32c13.3 0 24 10.7 24 24v287.4l114.8-120.5c9.3-9.8 24.8-10 34.3-.4z"
      />
    </svg>
    -€100.00
  </span>
</div>
`;

exports[`TransactionsTable renders Amount column as expected 2`] = `
<div>
  <span
    class="text-red-300 flex items-center"
  >
    <svg
      class="text-xs mr-1"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 448 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M413.1 222.5l22.2 22.2c9.4 9.4 9.4 24.6 0 33.9L241 473c-9.4 9.4-24.6 9.4-33.9 0L12.7 278.6c-9.4-9.4-9.4-24.6 0-33.9l22.2-22.2c9.5-9.5 25-9.3 34.3.4L184 343.4V56c0-13.3 10.7-24 24-24h32c13.3 0 24 10.7 24 24v287.4l114.8-120.5c9.3-9.8 24.8-10 34.3-.4z"
      />
    </svg>
    -€100.00
  </span>
</div>
`;

exports[`TransactionsTable renders Date column as expected 1`] = `
<div>
  <div
    class="group flex relative"
  >
    <span>
      2023-01-01
    </span>
    <span
      class="opacity-0 absolute rounded-md bg-black text-center z-50 -translate-x-1/2 left-1/2 mt-2 top-full text-xs p-2 transition-opacity group-hover:opacity-40"
    >
      tx_guid
    </span>
  </div>
</div>
`;

exports[`TransactionsTable renders FromTo column as expected 1`] = `
<div>
  <ul>
    <li>
      <a
        class="badge hover:text-slate-300 bg-red-500/20 text-red-300"
        href="/dashboard/accounts/account_guid_2"
      >
        Expenses:expense
      </a>
    </li>
  </ul>
</div>
`;

exports[`TransactionsTable renders Total column as expected 1`] = `
<div>
  <span>
    €250.00
  </span>
</div>
`;
